feat: added new billboard

--- a/#src/index.html
+++ b/#src/index.html
@@ -257,11 +257,11 @@
 								</div>
 								<div class="billboard__content">
 									<div class="billboard__images">
-										<!--<div class="billboard__image-item _ibg pb140">
+										<div class="billboard__image-item _ibg pb140">
 											<div class="billboard__overlay"></div>
 											<button class="billboard__button _icon-search"></button>
-											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">
-										</div>-->
+											<img src="./img/programs/billboard2.jpg" alt="Афиша фестиваля">
+										</div>
 <!--										<div class="billboard__image-item _ibg pb100">
 											<div class="billboard__overlay"></div>
 											<button class="billboard__button _icon-search"></button>
