--- a/#src/photos.html
+++ b/#src/photos.html
@@ -11,14 +11,14 @@
             <div class="intro__container _container">
             </div>
         </section>
-<!--        <section class="fest-video">
+        <section class="fest-video">
             <div class="fest-video__container _container">
                 <div style="padding:56.25% 0 0 0;position:relative;">
-                    <iframe src="//player.vimeo.com/video/717559078?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ffffff" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="ceramicfest2022.mp4"></iframe>
+                    <iframe src="//player.vimeo.com/video/838815332?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ffffff" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="ceramicfest2022.mp4"></iframe>
                 </div>
                 <script src="https://player.vimeo.com/api/player.js"></script>
             </div>
-        </section>-->
+        </section>
         <section class="photos">
             <div class="photos__container _gallery">
                 <a href="./img/photos/1.jpg" class="photos__image _ibg"><img src="./img/photos/1.jpg" alt="Фото с фестиваля современной культуры"></a>
