feat: added new photos

--- a/#src/index.html
+++ b/#src/index.html
@@ -35,10 +35,43 @@
 					<div class="aboutus__container _container">
 						<h3 class="aboutus__title title">Что пишут о нас в СМИ</h3>
 						<div class="aboutus__content">
-							<!--<a href="https://gtrk-kaluga.ru/otkrytaya-studiya/audio-6904" class="aboutus__smi" target="_blank" rel="noopener">
-									<img src="./img/aboutus/gtrk-russia.png" alt="Калужская неделя">
+							<a href="https://www.vest-news.ru/news/196576" class="aboutus__smi" target="_blank" rel="noopener">
+									<img src="./img/aboutus/vest-news.png" alt="Весть news">
 							</a>
-							<a href="https://gtrk-kaluga.ru/news/kultura/news-35502" class="aboutus__smi" target="_blank" rel="noopener">
+							<a href="https://kgvinfo.ru/novosti/kultura/kaluzhan-priglashayut-na-iv-mezhdunarodnyy-festival-sovremennoy-keramiki/?sphrase_id=1231436" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/kginfo.gif" alt="Калужские Губернские ведомости">
+							</a>
+							<a href="https://nedelya40.ru/zhizn-v-epohu-peremen_221103/" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/nedelya40.png" alt="Калужская неделя">
+							</a>
+							<a href="https://gtrk-kaluga.ru/otkrytaya-studiya/audio-8187" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/gtrk-russia.png" alt="Россия гтрк Калуга">
+							</a>
+							<a href="https://news.myseldon.com/ru/news/index/286355479" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/seldon.png" alt="Россия гтрк Калуга">
+							</a>
+							<a href="https://nikatv.ru/news/kultura/v-kaluzhskom-ikc-otkrylsya-festival-sovremennoy-keramiki" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/nikaTV.webp" alt="Россия гтрк Калуга">
+							</a>
+							<a href="https://nikatv.ru/news/kultura/v-kaluzhskom-ikc-otkrylsya-festival-sovremennoy-keramiki" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/aif.jpg" alt="Россия гтрк Калуга">
+							</a>
+							<a href="https://kaluga.bezformata.com/listnews/iktc-otkrilsya-festival-sovremennoy/118293127/" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/bezformata.jpg" alt="Россия гтрк Калуга">
+							</a>
+							<a href="https://visit-kaluga.ru/events/keramisty-v-poiskax-formuly-transformacii-materii-mlechnyj-put-2023/" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/turist.jpg" alt="Россия гтрк Калуга">
+							</a>
+							<a href="https://kgvinfo.ru/novosti/obshchestvo/tusovka-keramistov/" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/kginfo.gif" alt="Россия гтрк Калуга">
+							</a>
+							<a href="https://vk.com/ceramics_fest_kaluga?z=video-186246539_456241821%2Feddcf57c2a42f2beb0%2Fpl_wall_-204533248" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/vk.jpg" alt="Россия гтрк Калуга">
+							</a>
+							<a href="https://vk.com/ceramics_fest_kaluga?w=wall-73674035_13488" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/vk.jpg" alt="Россия гтрк Калуга">
+							</a>
+							<!--<a href="https://gtrk-kaluga.ru/news/kultura/news-35502" class="aboutus__smi" target="_blank" rel="noopener">
 								<img src="./img/aboutus/gtrk-russia.png" alt="Калужская неделя">
 							</a>
 							<a href="https://gtrk-kaluga.ru/utro-rossii-kaluga/video-6893" class="aboutus__smi" target="_blank" rel="noopener">
@@ -335,7 +368,6 @@
 										<p>13.30-14.30- Мастер-класс. Балбанян Григор (Ереван/Москва)</p>
 										<p>13.30-14.30- Мастер-класс «Керамо-терапии «ТрансФормаЦиЯ»».  Енацкая Марина (Калуга ИКЦ) & Бычкова Алена (Калуга ЦСО)</p>
 										<p>15.00-16.00- Мастер-класс. Мастерская керамики ИКЦ.  Группа «Абстракция в керамике».</p>
-										<p>18.00-Закрытие фестиваля. Концерт Мazzltoff (г.Тула) (кофейня ПОСТКУЛЬТУРА). Локация: Арт-яма</p>
 									</div>
 								</div>
 							</div>
@@ -348,9 +380,6 @@
 							<h3 class="item-partners__title title">Партнеры</h3>
 							<div class="item-partners__intro">Если вы хотите стать партнером фестиваля, свяжитесь с нами, мы обсудим детали.</div>
 							<div class="item-partners__logos">
-								<div class="item-partners__image">
-									<img src="./img/partners/33.jpg" alt="Кофейня посткультура">
-								</div>
 								<div class="item-partners__image">
 									<img src="./img/partners/32.jpg" alt="Нежный бизнес">
 								</div>
